crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__bytes_literals.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprBytesLiteral
        - BytesLiteral
        - BytesLiteral
        - BytesLiteral
