crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__class_type_parameters.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtClassDef
      - Identifier
      - TypeParams
        - TypeParamTypeVar
          - Identifier
          - ExprName
        - TypeParamTypeVar
          - Identifier
        - TypeParamTypeVarTuple
          - Identifier
        - TypeParamParamSpec
          - Identifier
      - Suite
        - StmtExpr
          - ExprEllipsisLiteral
