crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__compare.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprCompare
        - ExprNumberLiteral
        - Lt
        - ExprName
        - Lt
        - ExprNumberLiteral
