crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__decorators.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtFunctionDef
      - Decorator
        - ExprName
      - Identifier
      - Parameters
      - Suite
        - StmtPass
    - StmtClassDef
      - Decorator
        - ExprName
      - Identifier
      - Suite
        - StmtPass
