crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__dict_comprehension.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprDictComp
        - ExprName
        - ExprBinOp
          - ExprName
          - Pow
          - ExprNumberLiteral
        - Comprehension
          - ExprName
          - ExprName
