crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__f_strings.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprFString
        - StringLiteral
        - FString
          - InterpolatedStringLiteralElement
          - InterpolatedElement
            - ExprName
            - InterpolatedStringLiteralElement
            - InterpolatedElement
              - ExprName
            - InterpolatedStringLiteralElement
          - InterpolatedStringLiteralElement
