crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__function_positional_only_with_default.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtFunctionDef
      - Identifier
      - Parameters
        - ParameterWithDefault
          - Parameter
            - Identifier
        - ParameterWithDefault
          - Parameter
            - Identifier
          - ExprNumberLiteral
        - ParameterWithDefault
          - Parameter
            - Identifier
          - ExprNumberLiteral
        - Parameter
          - Identifier
      - Suite
        - StmtPass
