crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__function_type_parameters.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtFunctionDef
      - Identifier
      - TypeParams
        - TypeParamTypeVar
          - Identifier
          - ExprName
        - TypeParamTypeVar
          - Identifier
        - TypeParamTypeVarTuple
          - Identifier
        - TypeParamParamSpec
          - Identifier
      - Parameters
      - Suite
        - StmtExpr
          - ExprEllipsisLiteral
