crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__list_comprehension.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprListComp
        - ExprName
        - Comprehension
          - ExprName
          - ExprName
