crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__match_class_pattern.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtMatch
      - ExprName
      - MatchCase
        - PatternMatchClass
          - ExprName
          - PatternArguments
            - PatternMatchValue
              - ExprNumberLiteral
            - PatternMatchValue
              - ExprNumberLiteral
        - Suite
          - StmtExpr
            - ExprEllipsisLiteral
      - MatchCase
        - PatternMatchClass
          - ExprName
          - PatternArguments
            - PatternKeyword
              - Identifier
              - PatternMatchValue
                - ExprNumberLiteral
            - PatternKeyword
              - Identifier
              - PatternMatchValue
                - ExprNumberLiteral
            - PatternKeyword
              - Identifier
              - PatternMatchValue
                - ExprNumberLiteral
        - Suite
          - StmtExpr
            - ExprEllipsisLiteral
