crates/ruff_python_ast_integration_tests/tests/snapshots/source_order__set_comprehension.snap
---
source: crates/ruff_python_ast_integration_tests/tests/source_order.rs
expression: trace
---
- ModModule
  - Suite
    - StmtExpr
      - ExprSetComp
        - ExprName
        - Comprehension
          - ExprName
          - ExprName
